overlays/prod/scheddy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: training
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ports:
  - name: http
    port: 3000
  selector:
    app: training
